--- a/emacs-pass.org
+++ b/emacs-pass.org
@@ -1,4 +1,5 @@
 #+TITLE: Password Management
+#+PROPERTY: header-args :tangle ~/.emacs.d/site-lisp/emacs-pass.el
 
 * GPG keys
 
@@ -121,7 +122,7 @@ Phone Support PIN #: 84719
 
 First off, let's pull in support to Emacs:
 
-#+BEGIN_SRC emacs-lisp :tangle ~/.emacs.d/site-lisp/emacs-pass.el
+#+BEGIN_SRC emacs-lisp
   (use-package password-store
     :ensure t
     :bind
@@ -152,8 +153,10 @@ First, install =pass= if not already present.
 
 #+BEGIN_SRC sh :dir /sudo:: :results silent
   if [ ! -x /usr/bin/pass ]; then
-      if [ -x /etc/fedora-release ]; then
+      if [ -e /etc/fedora-release ]; then
           dnf -y install pass
+      elif [ -e /etc/debian-release ]; then
+          apt-get -y install pass
       fi
   fi
 #+END_SRC
