--- a/emacs-mail.org
+++ b/emacs-mail.org
@@ -186,10 +186,11 @@ information, see http://www.djcbsoftware.nl/code/mu/mu4e/Contexts.html#Contexts.
                               ("date:7d..now    AND ( maildir:/Personal/INBOX OR maildir:/Work/INBOX OR maildir:/Work/incoming OR maildir:/Work/ops )" "Last 7 days" ?7)
                               ("date:..7d       AND ( maildir:/Personal/INBOX OR maildir:/Work/INBOX OR maildir:/Work/incoming OR maildir:/Work/ops )" "Old email" ?o)
                               ("maildir:/Personal/Archive or maildir:/Work/Archive*" "Archive" ?a)
-                              (,sf/mu4e-bookmark-providers "ISPs" ?p)
+                              (,sf/mu4e-bookmark-providers "Providers" ?p)
                               (,sf/mu4e-bookmark-ren "ORGs" ?r)
                               (,sf/mu4e-bookmark-vendors "Vendors" ?v)
                               (,sf/mu4e-bookmark-bulk "Bulk" ?b)
+                              (,sf/mu4e-bookmark-expunge-candidates "Expunge?" ?x)
                               ("flag:attach" "Messages with attachments" ?A)
                               ("maildir:/Work/INBOX AND ( subject:infringement OR contact:soc@ren-isac.net OR to:abuse OR flag:flagged )" "Need attention" ?!)
                               ("mime:text/calendar" "Meeting invites" ?c)
