--- a/emacs.org
+++ b/emacs.org
@@ -124,7 +124,7 @@ use the init file as specified by =user-init-file=, which is typically
 /init.el/.
 
 #+BEGIN_SRC emacs-lisp
-(setq custom-file (concat user-emacs-directory "custom.el"))
+(setq custom-file (concat user-emacs-directory "user/custom.el"))
 (when (file-exists-p custom-file)
   (load custom-file))
 #+END_SRC
