--- a/emacs-eshell.org
+++ b/emacs-eshell.org
@@ -95,10 +95,32 @@ then provide helper function to launch =ansi-term=.
     (get-buffer-process "*ansi-term*"))
 #+END_SRC
 
-* Postamble
-
 Finally, offer module for use.
 
 #+BEGIN_SRC emacs-lisp
 (provide 'emacs-eshell)
+#+END_SRC
+
+* License
+
+This document is licensed under the GNU Free Documentation License
+version 1.3 or later (http://www.gnu.org/copyleft/fdl.html).
+
+#+BEGIN_SRC 
+Copyright (C) 2017 Stephen Fromm
+
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.3
+or any later version published by the Free Software Foundation;
+with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
+
+Code in this document is free software: you can redistribute it
+and/or modify it under the terms of the GNU General Public
+License as published by the Free Software Foundation, either
+version 3 of the License, or (at your option) any later version.
+
+This code is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
 #+END_SRC
