--- a/emacs.org
+++ b/emacs.org
@@ -1362,136 +1362,11 @@ A function to insert an [[http://www.theatlantic.com/technology/archive/2014/05/
 
 ** Programming and Editing
 
-*** Basics
-
-Show matching parenthesis.
-
-#+BEGIN_SRC emacs-lisp
-(show-paren-mode t)
-#+END_SRC
-
-I want a final newline to be added to a file when it is about to be
-saved.
+Define how emacs behavior for programming and editing.  See
+[[file:emacs-programming.org][emacs-programming.org]] ...
 
 #+BEGIN_SRC emacs-lisp
-  (setq-default require-final-newline t)
-#+END_SRC
-
-*** Lisp
-
-A default offset of 2 seems to make sense for lisp.
-
-#+BEGIN_SRC emacs-lisp
-(setq lisp-indent-offset 2)
-#+END_SRC
-
-*** Lua
-
-#+BEGIN_SRC emacs-lisp
-  (use-package lua-mode
-    :ensure t)
-#+END_SRC
-
-*** Markdown
-
-Help Emacs grok when to trigger /markdown-mode/ when editing certain
-files.
-
-This contains some helpers for creating tables in Github-Flavored
-Markdown (GFM) with /orgtbl-mode/.  To convert to a GFM table, use *C-c
-C-c* to create (or update) the table.  This was taken from [[http://emacs.stackexchange.com/questions/4276/correct-markdown-format-tables-with-orgtbl-mode][this]]
-stackexchange.
-
-#+BEGIN_SRC emacs-lisp
-  (use-package markdown-mode
-    :ensure t
-    :commands (markdown-mode gfm-mode)
-    :mode (("README\\.md\\'" . gfm-mode)
-            ("\\.md\\'" . markdown-mode)
-            ("\\.markdown\\'" . markdown-mode))
-    :init
-    (defun orgtbl-to-gfm (table params)
-    "Convert the Orgtbl mode TABLE to GitHub Flavored Markdown."
-    (let* ((alignment (mapconcat (lambda (x) (if x "|--:" "|---"))
-                     org-table-last-alignment ""))
-       (params2
-        (list
-         :splice t
-         :hline (concat alignment "|")
-         :lstart "| " :lend " |" :sep " | ")))
-      (orgtbl-to-generic table (org-combine-plists params2 params))))
-    (defun sf/insert-org-to-md-table (table-name)
-      "Helper function to create markdown and orgtbl boilerplate"
-      (interactive "*sEnter table name: ")
-      (insert "<!---
-  ,#+ORGTBL: SEND " table-name " orgtbl-to-gfm
-
-  -->
-  <!--- BEGIN RECEIVE ORGTBL " table-name " -->
-  <!--- END RECEIVE ORGTBL " table-name " -->")
-      (previous-line)
-      (previous-line)
-      (previous-line))
-    )
-#+END_SRC
-
-*** Python
-
-Turn on *linum-mode* when editing Python files.
-
-#+BEGIN_SRC emacs-lisp
-(add-hook 'python-mode-hook 'linum-mode)
-(add-hook 'python-mode-hook 'sf/whitespace)
-#+END_SRC
-
-*** Shell scripts
-
-Also turn on *linum-mode* for shell scripts.
-
-#+BEGIN_SRC emacs-lisp
-(add-hook 'shell-script-mode 'linum-mode)
-(add-hook 'shell-script-mode 'sf/whitespace)
-#+END_SRC
-
-*** Text
-
-Use auto-fill and set a column width to 72.
-
-#+BEGIN_SRC emacs-lisp
-(add-hook 'text-mode-hook 'turn-on-auto-fill)
-(add-hook 'text-mode-hook
-  '(lambda() (set-fill-column 72)))
-#+END_SRC
-
-*** YAML
-
-A helper mode when editing [[http://yaml.org/][YAML]] files.
-
-#+BEGIN_SRC emacs-lisp
-  (use-package yaml-mode
-    :ensure t
-    :config
-    (progn
-      (setq yaml-indent-offset 2)
-      (add-hook 'yaml-mode-hook 'linum-mode)
-      (add-hook 'yaml-mode-hook 'sf/whitespace)
-      )
-    )
-#+END_SRC
-
-*** JSON
-
-A helper mode when editing [[www.json.org][JSON]].
-
-#+BEGIN_SRC emacs-lisp
-  (use-package json-mode
-    :ensure t
-    :config
-    (progn
-      (add-hook 'json-mode-hook 'linum-mode)
-      (add-hook 'json-mode-hook 'sf/whitespace)
-      )
-    )
+  (require 'emacs-programming)
 #+END_SRC
 
 ** Mail configuration
